log/build_2026-04-08_00-54-18/flapping_foil_propulsors_control/stderr.log
  File "/home/shafa/flapping-propulsors-control/install/flapping_foil_propulsors_control/lib/python3.12/site-packages/flapping_foil_propulsors_control/Dynamixcel_WX430_T200_interface.py", line 62
    """Pure Write-Only Callback: No blocking reads allowed here."""
       ^^^^
SyntaxError: invalid syntax

